--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,70 +1,36 @@
-<!-- <footer>
-  <div class="row">
-    <div class="col span-1-of-2">
-      <ul class="footer-nav">
-        <li><a href="http://cyphercore.io/team/" target=" ">About</a></li>
-        <li><a href="https://medium.com/cypher-core" target=" ">Blog</a></li>
-        <li><a href="http://coris-docs.cyphercore.io/" target=" ">Docs</a></li>
-      </ul>
-    </div>
-    <div class="col span-1-of-2">
-      <ul class="social-links">
-        <li><a href="#"><i class="ion-social-github" target=" "></i></a></li>
-        <li><a href="https://twitter.com/cypher_core" target=" "><i class="ion-social-twitter"></i></a></li>
-        <li><a href="https://t.me/cyphercore" target=" "><i class="ion-paper-airplane"></i></a></li>
-        <li><a href="https://www.linkedin.com/company/cypher-core/about/?viewAsMember=true" target=" "><i class="ion-social-linkedin"></i></a></li>
-      </ul>
-    </div>
+<footer class="page-footer pt-4">
+  <div class="container">
+
+      <ul class="list-unstyled list-inline text-center">
+          <li class="list-inline-item">
+            <a class="mx-1" href="https://github.com/jim380/Coris" target=" ">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="mx-1" href="https://twitter.com/cypher_core" target=" ">
+              <i class="fab fa-twitter-square"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="mx-1" href="https://t.me/cyphercore" target=" ">
+              <i class="fab fa-telegram-plane"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="mx-1" href="https://www.linkedin.com/company/cypher-core/about/?viewAsMember=true" target=" ">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="mx-1" href="http://cyphercore.io" target=" ">
+              <i class="fas fa-code"></i>
+            </a>
+          </li>
+        </ul>
+
   </div>
-  <div class="row">
-    <p>
-      Copyright &copy; 2019 - <a class="footer-brand" href="http://cyphercore.io" target=" ">Cypher Core LLC.</a>
-    </p>
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="http://cyphercore.io"> Cypher Core LLC.</a>
   </div>
-</footer> -->
-
-<!-- Footer -->
-<footer class="page-footer font-small pt-4">
-
-    <!-- Footer Elements -->
-    <div class="container">
-
-        <ul class="list-unstyled list-inline text-center">
-            <li class="list-inline-item">
-              <a class="btn-floating btn-fb mx-1" mdbWavesEffect href="https://github.com/jim380/Coris" target=" ">
-                <mdb-icon fab icon="github"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-tw mx-1" mdbWavesEffect href="https://twitter.com/cypher_core" target=" ">
-                <mdb-icon fab icon="twitter"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-gplus mx-1" mdbWavesEffect href="https://t.me/cyphercore" target=" ">
-                <mdb-icon fab fab icon="telegram"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-li mx-1" mdbWavesEffect href="https://www.linkedin.com/company/cypher-core/about/?viewAsMember=true" target=" ">
-                <mdb-icon fab icon="linkedin"></mdb-icon>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-dribbble mx-1" mdbWavesEffect href="http://cyphercore.io" target=" ">
-                <mdb-icon fab icon="dribbble"></mdb-icon>
-              </a>
-            </li>
-          </ul>
-
-    </div>
-    <!-- Footer Elements -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2019 Copyright:
-      <a href="http://cyphercore.io"> Cypher Core LLC.</a>
-    </div>
-    <!-- Copyright -->
-
-  </footer>
-  <!-- Footer -->
+</footer>
