--- a/src/app/components/navigation/sidenav/sidenav.component.scss
+++ b/src/app/components/navigation/sidenav/sidenav.component.scss
@@ -5,39 +5,47 @@
   margin-top: 10px;
 }
 
-.brand-nav {
-  vertical-align: middle;
-  margin-bottom: 0;
-}
-
-.d-sm-inline-block {
-  margin-bottom: 0;
-  // color: white;
-  padding-left: 5px;
-  font-size: 120%;
-}
-
-h5 .mb-0 {
-  padding-left: 0;
-}
-
-.active {
-  color: #F8BBD0 !important
-}
-
-.alpha-chip {
-  margin-left: 10px; 
-}
-
 a:hover,
 a:active {
-    text-decoration: none; 
+  text-decoration: none; 
 }
 
-.theme-toggle {
-  position: fixed;
+.example-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
   top: 0;
+  bottom: 0;
+  left: 0;
   right: 0;
-  margin-right: 10px;
-  margin-top: 30px;
+}
+
+.example-is-mobile .example-toolbar {
+  position: fixed;
+  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+  z-index: 2;
+}
+
+h1.example-app-name {
+  margin: 0px 8px 0px 8px;
+}
+
+.example-sidenav-container {
+  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+  flex: 1;
+}
+
+.example-is-mobile .example-sidenav-container {
+  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+     `<body>` to be our scrolling element for mobile layouts. */
+  flex: 1 0 auto;
+}
+
+.example-icon {
+  padding: 0 14px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
 }
