--- a/src/app/components/popups/btn-close/btn-close.component.html
+++ b/src/app/components/popups/btn-close/btn-close.component.html
@@ -1,26 +1,3 @@
-<div class="fixed-action-btn" style="top: 25px; right: 24px;">
-
-  <a class="btn-floating btn-large red waves-light" mdbWavesEffect (click)="onCloseClick()">
-    <i class="fas fa-times"></i>
-  </a>
-</div>
-<div class="fixed-action-btn" style="bottom: 35px; right: 24px;">
-    <ng-template #popTemplate>
-      <i 
-      class="ion-ios-copy copy-button text-monospace" 
-      style="cursor: pointer;" 
-      ngxClipboard 
-      [cbContent]="'coris.network/'+link" 
-      (click)="onCopySucceess()"
-      mdbTooltip="copy to clipboard" mdbTooltipPosition="above">
-        coris.network/{{link}}
-      </i>  
-    </ng-template>
-    <a  class="btn-floating green waves-light" 
-        mdbWavesEffect
-        [mdbPopover]="popTemplate"
-        placement="top"
-        mdbPopoverHeader="External link">
-        <i class="fas fa-external-link-alt"></i>
-    </a>
+<div style="top: 25px; right: 24px;">
+  <button mat-fab (click)="onCloseClick()">Close All</button>
 </div>
