--- a/src/app/components/popups/validator/validator.component.scss
+++ b/src/app/components/popups/validator/validator.component.scss
@@ -1,50 +1,49 @@
-.card.card-cascade .view.gradient-card-header {
-  padding: 1rem 1rem;
-  text-align: center;
-}
+// .card.card-cascade .view.gradient-card-header {
+//   padding: 1rem 1rem;
+//   text-align: center;
+// }
 
-.card.card-cascade h3,
-.card.card-cascade h4
-{
-  margin-bottom: 0px;
-}
+// .card.card-cascade h3,
+// .card.card-cascade h4
+// {
+//   margin-bottom: 0px;
+// }
 
-.blue-gradient {
-  background: -webkit-linear-gradient(50deg, #45cafc, #303f9f);
-  background: linear-gradient(40deg, #45cafc, #4285f4);
-}
+// .blue-gradient {
+//   background: -webkit-linear-gradient(50deg, #45cafc, #303f9f);
+//   background: linear-gradient(40deg, #45cafc, #4285f4);
+// }
 
-.font-bold {
-  font-weight: 600;
-}
+// .font-bold {
+//   font-weight: 600;
+// }
 
-.card.card-cascade {
-  .view {
-    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
-  }
-}
+// .card.card-cascade {
+//   .view {
+//     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
+//   }
+// }
 
-a {
-  color: #4a4a4a;
-}
+// a {
+//   color: #4a4a4a;
+// }
 
-th, td {
-  overflow: hidden;
-  width:auto;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
+// th, td {
+//   overflow: hidden;
+//   width:auto;
+//   text-overflow: ellipsis;
+//   white-space: nowrap;
+// }
 
-mdb-card-title i {
-  font-size: 150%;
-}
+// mat-card-title i {
+//   font-size: 150%;
+// }
 
-.card-title {
-  margin: 0;
-  font-size: 130%;
-}
+// .card-title {
+//   margin: 0;
+//   font-size: 130%;
+// }
 
-.card-title h1 {
-  color: black;
-}
-
+// .card-title h1 {
+//   color: black;
+// }
