--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  </head>
-  <!-- <app-main-nav> -->
-    <app-sidenav></app-sidenav>
-    <!-- <body>
-      <app-status-bar></app-status-bar>
-      <router-outlet></router-outlet>
-      <app-scroll-top></app-scroll-top>
-    </body> -->
-    <!-- <app-footer></app-footer> -->
-  <!-- </app-main-nav> -->
-</html>
+<div class="mat-app-background basic-container">
+  <app-sidenav></app-sidenav>
+</div>
