--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,9 +1,8 @@
-<body [className]="(theme$|async) === 'dark-theme' ? 'navy-blue-skin' : 'indigo-skin'">
+<!-- <body [className]="(theme$|async) === 'dark-theme' ? 'navy-blue-skin' : 'indigo-skin'">
   <header>
-      <!-- Sidebar navigation -->
-      <mdb-side-nav #sidenavRef class="sn-bg-1" [fixed]="false">
+      <mat-sidenav #sidenavRef>
     
-        <mdb-navbar-brand>
+        <div>
           <li>
             <div class="logo-wrapper waves-light">
               <a [routerLink]="['/validators']">
@@ -11,11 +10,9 @@
               </a>
             </div>
           </li>
-          <!--/. Logo -->
-        </mdb-navbar-brand>
+        </div>
     
         <links>
-          <!--Social-->
           <li>
             <ul class="social">
               <li>
@@ -40,242 +37,191 @@
               </li>
             </ul>
           </li>
-          <!--/Social-->
-          <!--Search Form-->
-          <!-- <li>
-            <form class="search-form" role="search">
-              <div class="form-group md-form mt-0 pt-1 waves-light" mdbWavesEffect>
-                <input #mobileSearchQueryRef type="text" class="form-control" placeholder="enter here">
-                <button (click)="onMobileSearchBtnClick(mobileSearchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
-              </div>
-            </form>
-          </li> -->
-          <!--/.Search Form-->
-          <!-- Side navigation links -->
+
           <li>
             <ul class="collapsible collapsible-accordion">
-              <mdb-accordion [multiple]="false" aria-multiselectable="false">
-    
-                <!-- Collapsible link -->
-                <!-- <mdb-accordion-item>
-                  <mdb-accordion-item-head mdbWavesEffect>
-                    <i class="fas fa-chevron-right"></i> Menu 1
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body>
-                    <ul>
-                      <li>
-                        <a href="#" mdbWavesEffect>Link 1</a>
-                      </li>
-                      <li>
-                        <a href="#" mdbWavesEffect>Link 2</a>
-                      </li>
-                    </ul>
-                  </mdb-accordion-item-body>
-                </mdb-accordion-item> -->
-    
-                <!-- Simple link -->
-                <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head routerLinkActive="active" mdbWavesEffect routerLink="/validators">
-                    <i class="fas fa-users"></i> Validators
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body></mdb-accordion-item-body>
-                </mdb-accordion-item>
-    
-                <!-- Collapsible link -->
-                <!-- <mdb-accordion-item>
-                  <mdb-accordion-item-head mdbWavesEffect>
-                    <i class="far fa-eye"></i> Collapsible menu 2
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body>
-                    <ul>
-                      <li>
-                        <a href="#" mdbWavesEffect>Link 1</a>
-                      </li>
-                      <li>
-                        <a href="#" mdbWavesEffect>Link 2</a>
-                      </li>
-                    </ul>
-                  </mdb-accordion-item-body>
-                </mdb-accordion-item> -->
-    
-                <!-- Simple link -->
-                <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head routerLinkActive="active" mdbWavesEffect routerLink="/blocks">
-                    <i class="fa fa-cubes"></i> Blocks
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body></mdb-accordion-item-body>
-                </mdb-accordion-item>
-                
-                <mdb-accordion-item class="no-collase">
-                    <mdb-accordion-item-head mdbWavesEffect routerLinkActive="active" routerLink="/txs">
-                      <i class="fa fa-tasks"></i> Transactions
-                    </mdb-accordion-item-head>
-                    <mdb-accordion-item-body></mdb-accordion-item-body>
-                </mdb-accordion-item>
-
-                <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect routerLinkActive="active" routerLink="/gov">
-                    <i class="fa fa-university"></i> Governance
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body></mdb-accordion-item-body>
-              </mdb-accordion-item>
-
-              <mdb-accordion-item class="no-collase">
-                <h4 class="theme-toggle justify-content-between align-items-center">
-                  <mat-slide-toggle (change)="onToggleTheme()" class="app-toggle">Dark Theme</mat-slide-toggle>
-                </h4>
-              </mdb-accordion-item>
-  
-              </mdb-accordion>
+              <mat-button-toggle-group>
+                <mat-button-toggle routerLink="/validators">
+                  <i class="fas fa-users"></i>
+                  Validators
+                </mat-button-toggle>
+                <mat-button-toggle outerLink="/blocks">
+                  <i class="fa fa-cubes"></i>
+                  Blocks
+                </mat-button-toggle>
+                <mat-button-toggle outerLink="/txs">
+                  <i class="fa fa-tasks"></i> 
+                  Transactions
+                </mat-button-toggle>
+                <mat-button-toggle outerLink="/gov">
+                  <i class="fa fa-university"></i>
+                  Governance
+                </mat-button-toggle>
+              </mat-button-toggle-group>
             </ul>
           </li>
-          <!--/. Side navigation links -->
         </links>
         <div class="sidenav-bg mask-strong"></div>
-      </mdb-side-nav>
-      <!--/. Sidebar navigation -->
-    
-      <!-- Navbar -->
+      </mat-sidenav>
+
       <mdb-navbar SideClass="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav"
                   [containerInside]="false">
     
         <navlinks class="navbar-container">
-          <!-- SideNav slide-out button -->
           <div class="float-left">
             <a (click)="sidenavRef.show()" class="button-collapse hidden-nav-button-collapse">
               <i class="fas fa-bars"></i>
             </a>
           </div>
-          <!--/. SideNav slide-out button -->
         </navlinks>
     
         <mdb-navbar-brand>
-          <!-- Breadcrumb-->
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
             <a [routerLink]="['/validators']"><h1 class="brand-nav">Coris</h1></a>
             <mat-chip-list class="alpha-chip">
-                <!-- <mat-chip color = "accent">
-                  alpha
-                </mat-chip> -->
-                <mdb-badge color="pink">alpha</mdb-badge>
+                <span class="badge">alpha<span>
             </mat-chip-list>
           </div>
           
-          <!--/. Breadcrumb-->
         </mdb-navbar-brand>
     
         <navlinks>
           <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
             <li class="nav-item">
-              <form class="form-inline waves-light waves-light ml-auto clearfix d-none d-xl-inline-block" mdbWavesEffect>
+              <form class="form-inline waves-light waves-light ml-auto clearfix d-none d-xl-inline-block">
                 <div  class="md-form my-0">
                   <input style="width: 30vw;" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="Enter moniker / address / height / hash" aria-label="Search">
-                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
+                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit">Search</button>
                 </div>
               </form>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active">
+              <a class="nav-link waves-light" routerLink="/validators" routerLinkActive="active">
                 <i class="fa fa-users"></i>
                 <h3 class="clearfix d-none d-md-inline-block">Validator</h3>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/blocks" routerLinkActive="active">
+              <a class="nav-link waves-light" routerLink="/blocks" routerLinkActive="active">
                 <i class="fa fa-cubes"></i>
                 <h3 class="clearfix d-none d-md-inline-block">Blocks</h3>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/txs" routerLinkActive="active">
+              <a class="nav-link waves-light" routerLink="/txs" routerLinkActive="active">
                 <i class="fa fa-tasks"></i>
                 <h3 class="clearfix d-none d-md-inline-block">Transactions</h3>
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/gov" routerLinkActive="active">
+              <a class="nav-link waves-light" routerLink="/gov" routerLinkActive="active">
                 <i class="fa fa-university"></i>
                 <h3 class="clearfix d-none d-md-inline-block">Governance</h3>
               </a>
             </li>
 
-            <!-- <li class="nav-item dropdown btn-group" dropdown>
-              <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                <i class="fa fa-bookmark"></i>
-                <h3 class="clearfix d-none d-sm-inline-block">{{ activeRoute }}</h3>
-              </a>
-              <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
-                <a class="dropdown-item" mdbWavesEffect routerLink="/validators">
-                  <i class="fa fa-users"></i>
-                  Validator
-                </a>
-                <a class="dropdown-item" mdbWavesEffect routerLink="/blocks">
-                  <i class="fa fa-cubes"></i>
-                  Blocks
-                </a>
-                <a class="dropdown-item" mdbWavesEffect routerLink="/txs">
-                  <i class="fa fa-tasks"></i>
-                  Transactions
-                </a>
-                <a class="dropdown-item" mdbWavesEffect routerLink="/gov">
-                  <i class="fa fa-university"></i>
-                  Governance
-                </a>
-              </div>
-            </li> -->
-
-            <!-- <li class="nav-item dropdown btn-group" dropdown>
-              <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                <i class="fa fa-globe"></i>
-                <h3 class="clearfix d-none d-sm-inline-block">Network</h3>
-              </a>
-              <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
-                <a class="dropdown-item">MainNet</a>
-                <a class="dropdown-item">Testnet</a>
-                <a class="dropdown-item">Stay tuned</a>
-              </div>
-            </li> -->
           </ul>
         </navlinks>
       </mdb-navbar>
-      <!--/. Navbar -->
     </header>
-    <!--/.Double navigation-->
-    <!--Main Layout-->
     <main>
-        <body>
-          <div class="fixed-action-btn d-xl-none" style="top: 100px; right: 24px;">
-            <a  class="btn-floating pink waves-light" 
-                mdbWavesEffect
-                [mdbPopover]="popTemplate"
-                placement="left">
-              <i class="fas fa-search"></i>
-            </a>
-            
-          </div>
-          <ng-template #popTemplate>
-            <div class="row search-box">
-              <form style="width: 90vw;" class="form-inline waves-light" mdbWavesEffect>
-                <div class="md-form my-0">
-                  <input  #searchQueryRef class="form-control-mobile form-control mr-sm-2" 
-                          type="text" 
-                          placeholder="Enter tx hash / block height / address" 
-                          aria-label="Search">
-                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn outline="true" size="sm" class="btn-outline-custom my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
-                </div>
-              </form>
-            </div>
-          </ng-template>
+      <body>
+        <div class="fixed-action-btn d-xl-none" style="top: 100px; right: 24px;">
+          <a  class="btn-floating pink waves-light" 
+             
+              [mdbPopover]="popTemplate"
+              placement="left">
+            <i class="fas fa-search"></i>
+          </a>
           
-          <app-status-bar></app-status-bar>
-          <!-- <app-validator></app-validator> -->
-          <!-- <app-carousel></app-carousel> -->
-          <!-- <app-test></app-test> -->
-          <router-outlet (activate)="onRouterEvent($event)"></router-outlet>
-          <app-scroll-top></app-scroll-top>
-          <app-footer></app-footer>
-        </body>
+        </div>
+        <ng-template #popTemplate>
+          <div class="row search-box">
+            <form style="width: 90vw;" class="form-inline waves-light">
+              <div class="md-form my-0">
+                <input  #searchQueryRef class="form-control-mobile form-control mr-sm-2" 
+                        type="text" 
+                        placeholder="Enter tx hash / block height / address" 
+                        aria-label="Search">
+                <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn outline="true" size="sm" class="btn-outline-custom my-0 waves-light" type="submit">Search</button>
+              </div>
+            </form>
+          </div>
+        </ng-template>
+        
+        <app-status-bar></app-status-bar>
+        <router-outlet (activate)="onRouterEvent($event)"></router-outlet>
+        <app-scroll-top></app-scroll-top>
+        <app-footer></app-footer>
+      </body>
     </main>
-    <!--/Main layout-->
+  </body>
+
+   -->
+<div class="example-container" 
+      [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" 
+                class="example-toolbar">
+    <button mat-icon-button 
+            class="d-none d-md-block"
+            (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="example-app-name">
+      CORIS
+    </h1>
+    <span class="d-none d-md-flex badge badge-secondary">Alpha</span>
+    <span class="example-spacer"></span>
+    <span class="d-flex d-md-none">
+      <a mat-list-item class="toolbar-nav-logo mx-3" routerLink="/validators">
+        <i class="fas fa-users"></i>
+      </a>
+      <a mat-list-item class="toolbar-nav-logo mx-3" routerLink="/blocks">
+        <i class="fa fa-cubes"></i>
+      </a>
+      <a mat-list-item class="toolbar-nav-logo mx-3" routerLink="/txs">
+        <i class="fas fa-tasks"></i>
+      </a>
+      <a mat-list-item class="toolbar-nav-logo mx-3" routerLink="/gov">
+        <i class="fa fa-university"></i>
+      </a>
+    </span>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="example-sidenav-container"
+                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav 
+                [mode]="over"
+                [fixedInViewport]="mobileQuery.matches" 
+                fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item routerLink="/validators">
+          <i class="mx-3 fas fa-users"></i>
+          Validators
+        </a>
+        <a mat-list-item routerLink="/blocks">
+          <i class="mx-3 fa fa-cubes"></i>
+          Blocks
+        </a>
+        <a mat-list-item routerLink="/txs">
+          <i class="mx-3 fas fa-tasks"></i>
+          Transactions
+        </a>
+        <a mat-list-item routerLink="/gov">
+          <i class="mx-3 fa fa-university"></i>
+          Governance
+        </a>
+        <h4 class="mx-3 justify-content-between align-items-center">
+          <mat-slide-toggle (change)="onToggleTheme()" class="app-toggle">Dark Theme</mat-slide-toggle>
+        </h4>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <app-status-bar></app-status-bar>
+      <router-outlet (activate)="onRouterEvent($event)"></router-outlet>
+      <app-footer></app-footer>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
