--- a/src/app/components/status-bar/carousel/carousel.component.scss
+++ b/src/app/components/status-bar/carousel/carousel.component.scss
@@ -1,142 +1,142 @@
-.main-row {
-    max-width: 100%;
-}
+// .main-row {
+//     max-width: 100%;
+// }
 
-.row {
-    justify-content: center;
-}
+// .row {
+//     justify-content: center;
+// }
 
-.card-header-title {
-    color: white;
-    font-size: 200%;
-    text-align: center;
-    display: inline-block;   
-}
+// .card-header-title {
+//     color: white;
+//     font-size: 200%;
+//     text-align: center;
+//     display: inline-block;   
+// }
 
-.card-body {
-    padding: 0;
-}
+// .card-body {
+//     padding: 0;
+// }
 
-.card-text {
-    margin-bottom: 0;
-}
+// .card-text {
+//     margin-bottom: 0;
+// }
 
-.col-12, .col-lg-3, .col-md-6, .w-25, .query-card-wrapper {
-    padding-right: 0;
-}
+// .col-12, .col-lg-3, .col-md-6, .w-25, .query-card-wrapper {
+//     padding-right: 0;
+// }
 
-.carousel-item {
-    max-height: 300px;
-}
+// .carousel-item {
+//     max-height: 300px;
+// }
 
-h1 {
-    font-weight: 400;
-    font-size: 180%;    
-}
+// h1 {
+//     font-weight: 400;
+//     font-size: 180%;    
+// }
 
 
-// ----------- staus card ------------- //
-.row {
-    max-width: 90%;
-  }
+// // ----------- staus card ------------- //
+// .row {
+//     max-width: 90%;
+//   }
   
-.card-text {
-  text-align: left;
-  margin-left: 20px;
-}
+// .card-text {
+//   text-align: left;
+//   margin-left: 20px;
+// }
 
-.cascading-admin-card {
-  margin-top: 20px; 
-  height: 200px;
-  // width: 350px;
-}
+// .cascading-admin-card {
+//   margin-top: 20px; 
+//   height: 200px;
+//   // width: 350px;
+// }
 
-.cascading-admin-card .admin-up {
-  margin-left: 4%;
-  margin-right: 4%;
-  margin-top: -20px; 
-}
+// .cascading-admin-card .admin-up {
+//   margin-left: 4%;
+//   margin-right: 4%;
+//   margin-top: -20px; 
+// }
 
-.cascading-admin-card .admin-up mdb-icon {
-  padding: 1.7rem;
-  font-size: 150%;
-  color: #fff;
-  text-align: left;
-  margin-right: 1rem;
-  border-radius: 3px; 
-}
+// .cascading-admin-card .admin-up mdb-icon {
+//   padding: 1.7rem;
+//   font-size: 150%;
+//   color: #fff;
+//   text-align: left;
+//   margin-right: 1rem;
+//   border-radius: 3px; 
+// }
 
-.cascading-admin-card .admin-up .data {
-  float: right;
-  margin-top: 2rem;
-  text-align: right; 
-}
+// .cascading-admin-card .admin-up .data {
+//   float: right;
+//   margin-top: 2rem;
+//   text-align: right; 
+// }
 
-.cascading-admin-card .admin-up .data p {
-  color: #999999;
-  font-size: 80%; 
-  text-align: right;
-}
+// .cascading-admin-card .admin-up .data p {
+//   color: #999999;
+//   font-size: 80%; 
+//   text-align: right;
+// }
 
-.cascading-admin-card .admin-up .data h4 {
-  font-size: 120%; 
-}
+// .cascading-admin-card .admin-up .data h4 {
+//   font-size: 120%; 
+// }
 
-@media (min-width: 575px) {
-  .cascading-admin-card .admin-up .data h4 {
-    font-size: 100%; 
-  }
-}
+// @media (min-width: 575px) {
+//   .cascading-admin-card .admin-up .data h4 {
+//     font-size: 100%; 
+//   }
+// }
 
-@media (min-width: 768px) { 
-  .cascading-admin-card .admin-up .data h4 {
-    font-size: 90%; 
-  }
-}
+// @media (min-width: 768px) { 
+//   .cascading-admin-card .admin-up .data h4 {
+//     font-size: 90%; 
+//   }
+// }
 
-@media (min-width: 992px) { 
-  .cascading-admin-card .admin-up .data h4 {
-    font-size: 110%; 
-  }
-}
+// @media (min-width: 992px) { 
+//   .cascading-admin-card .admin-up .data h4 {
+//     font-size: 110%; 
+//   }
+// }
 
-@media (min-width: 1400px) { 
-  .cascading-admin-card .admin-up .data h4 {
-    font-size: 120%; 
-  }
-}
+// @media (min-width: 1400px) { 
+//   .cascading-admin-card .admin-up .data h4 {
+//     font-size: 120%; 
+//   }
+// }
 
-.classic-admin-card .card-body {
-  color: #fff;
-  margin-bottom: 0;
-  padding: 0.9rem; 
-}
+// .classic-admin-card .card-body {
+//   color: #fff;
+//   margin-bottom: 0;
+//   padding: 0.9rem; 
+// }
 
-.classic-admin-card .card-body p {
-  font-size: 100%;
-  opacity: 0.7;
-  margin-bottom: 0;
-}
+// .classic-admin-card .card-body p {
+//   font-size: 100%;
+//   opacity: 0.7;
+//   margin-bottom: 0;
+// }
 
-.classic-admin-card .card-body h4 {
-  margin-top: 10px;
-}
+// .classic-admin-card .card-body h4 {
+//   margin-top: 10px;
+// }
 
-.classic-admin-card .card-body .float-right mdb-icon {
-  font-size: 100%;
-  opacity: 0.5; 
-}
+// .classic-admin-card .card-body .float-right mdb-icon {
+//   font-size: 100%;
+//   opacity: 0.5; 
+// }
 
-.classic-admin-card .progress {
-  margin: 0;
-  opacity: 0.7;
-}
+// .classic-admin-card .progress {
+//   margin: 0;
+//   opacity: 0.7;
+// }
   
-.cascading-admin-card .admin-up mdb-icon {
-  -webkit-box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.2), 0 2px 13px 0 rgba(0, 0, 0, 0.19);
-  box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.2), 0 2px 13px 0 rgba(0, 0, 0, 0.19);
-}
+// .cascading-admin-card .admin-up mdb-icon {
+//   -webkit-box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.2), 0 2px 13px 0 rgba(0, 0, 0, 0.19);
+//   box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.2), 0 2px 13px 0 rgba(0, 0, 0, 0.19);
+// }
 
-.controls-top {
-  margin-bottom: 0;
-}
+// .controls-top {
+//   margin-bottom: 0;
+// }
