--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -25,7 +25,7 @@
   </div>
   <ng-template #elseBlock>
     <div style="display: flex; justify-content: center;">
-      <mdb-spinner spinnerColor="blue"></mdb-spinner>
+      <mat-progress-bar color="accent" mode="indeterminate"></mat-progress-bar>
     </div> 
   </ng-template>
 </section>
