--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -1,77 +1,67 @@
 .status-bar {
-    // margin-top: 80px;
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .header-subtitle {
-    font-size: 150%;
-    margin-bottom: 0;
+  font-size: 150%;
+  margin-bottom: 0;
 }
 
 .proposer-title {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .query-card-wrapper {
-    padding: 20px 15px 0 0;
+  padding: 20px 15px 0 0;
 }
 
-// @media screen and (max-width: 768px) {
-//     .row {
-//         max-width: 95%; /*1140px or in %*/
-//     }
-// }
 
-.mdbTooltip {
-    height: 35px !important;
-    background-color: red !important;
-    color: white !important;
-    border-radius: 5px;
+.matTooltip {
+  height: 35px !important;
+  background-color: red !important;
+  color: white !important;
+  border-radius: 5px;
 }
 
 .container {
-    max-width: 95%; /*1140px or in %*/
-    margin: 0 auto;
+  max-width: 98%; /*1140px or in %*/
+  margin: auto;
 }
 
 .row-queries {
-    justify-content: center;
+  justify-content: center;
 }
 
 .card-header-title {
-    color: black;
-    font-size: 200%;
-    text-align: center;
-    display: inline-block;   
+  color: black;
+  font-size: 200%;
+  text-align: center;
+  display: inline-block;   
 }
 
 .card-body {
-    padding: 0;
+  padding: 0;
 }
 
 .card-text {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
-// .ng-tns-c4-5 {
-//     padding: 0;
-// }
-
 .col-12, .col-lg-3, .col-md-6, .w-25, .query-card-wrapper {
-    padding-right: 0;
+  padding-right: 0;
 }
 
 a:hover,
 a:active {
-    color: #FF4081;
-    /* border-bottom: 1px solid transparent; */
-    text-decoration: none; 
+  color: #FF4081;
+  /* border-bottom: 1px solid transparent; */
+  text-decoration: none; 
 }
 
 .left {
-    float: left;
+  float: left;
 }
 
 .right {
-    float: right;
+  float: right;
 }
