--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -8,16 +8,16 @@
 
       <ng-container matColumnDef="hash" sticky>
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>&nbsp;Hash</th>
-        <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
-          <mdb-badge color="pink">{{tx.hash | slice:0:15 }}... 
-          </mdb-badge>&nbsp;
+        <td mat-cell *matCellDef="let tx"> 
+          <span class="badge">{{tx.hash | slice:0:15 }}... 
+          </span>&nbsp;
           <i 
           class="ion-ios-copy copy-button" 
           style="cursor: pointer;" 
           ngxClipboard 
           [cbContent]="tx.hash" 
           (click)="onCopySucceess()"
-          mdbTooltip="copy to clipboard" placement="left">
+          matTooltip="copy to clipboard" placement="left">
           </i>
           </td>
       </ng-container>
@@ -71,9 +71,9 @@
         <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length" class="tx-detail">
           <div
               [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
-              <mdb-card class="text-left mb-3" bgColor="bg-light">
-                <mdb-card-body>
-                  <mdb-card-text class="text-left">
+              <mat-card class="text-left mb-3" bgColor="bg-light">
+                <mat-card-content>
+                  <mat-card-content class="text-left">
                     <span *ngFor="let action of tx.action; index as i">
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgSend'">
@@ -81,7 +81,7 @@
                           <app-validator-span [validator]="tx.msg[i].value.from_address"></app-validator-span>
                         </a>
                         <br>
-                        <mdb-badge default="true">sent</mdb-badge>&nbsp;
+                        <span class="badge" default="true">sent</span>&nbsp;
                         <span *ngIf="tx.msg[i].value.amount">
                           <span class="txn-amount">{{ tx.msg[i].value.amount[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                         </span>
@@ -95,19 +95,19 @@
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate' 
                             || tx.msg[i].type === 'cosmos-sdk/MsgUndelegate'">
                         <a (click)="openAccountDialog( tx.msg[i].value.delegator_address )"> 
-                          <mdb-badge color="cyan">{{ i+1 }}</mdb-badge> 
+                          <span class="badge" color="cyan">{{ i+1 }}</span> 
                           <app-validator-span [validator]="tx.msg[i].value.delegator_address"></app-validator-span>
                         </a>                          
                         <br>
                         <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate'; else elseDelegateBlock">
-                          <mdb-badge default="true">delegated</mdb-badge>&nbsp;
+                          <span class="badge" default="true">delegated</span>&nbsp;
                           <span *ngIf="tx.msg[i].value.amount">
                             <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                           </span>
                           to 
                         </span>
                         <ng-template #elseDelegateBlock>
-                          <mdb-badge default="true">undelegated</mdb-badge>&nbsp;
+                          <span class="badge" default="true">undelegated</span>&nbsp;
                           <span *ngIf="tx.msg[i].value.amount">
                             <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                           </span>
@@ -125,7 +125,7 @@
                             <app-validator-span [validator]="input.address"></app-validator-span>
                           </a>                          
                           <br>
-                          <mdb-badge default="true">sent</mdb-badge>&nbsp;
+                          <span class="badge" default="true">sent</span>&nbsp;
                           <span class="txn-amount">{{ input.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                         </span>
                         to
@@ -139,11 +139,11 @@
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgWithdrawDelegationReward'">
                         <a (click)="openAccountDialog( tx.msg[i].value.delegator_address )"> 
-                          <mdb-badge color="cyan">{{ i+1 }}</mdb-badge>
+                          <span class="badge" color="cyan">{{ i+1 }}</span>
                           <app-validator-span [validator]="tx.msg[i].value.delegator_address"></app-validator-span> 
                         </a>
                         <br>
-                        <mdb-badge default="true">withdrew rewards</mdb-badge>&nbsp;
+                        <span class="badge" default="true">withdrew rewards</span>&nbsp;
                         from 
                         <br>
                         <a (click)="openValidatorDialog( tx.msg[i].value.validator_address )"> 
@@ -156,7 +156,7 @@
                         <a (click)="openAccountDialog( tx.msg[i].value.delegator_address )"> 
                           <app-validator-span [validator]="tx.msg[i].value.delegator_address"></app-validator-span>
                         </a>
-                        &nbsp;<mdb-badge default="true">redelegated</mdb-badge>&nbsp;
+                        &nbsp;<span class="badge" default="true">redelegated</span>&nbsp;
                         <span *ngIf="tx.msg[i].value.amount">
                           <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                         </span>
@@ -178,7 +178,7 @@
                           <app-validator-span [validator]="tx.msg[i].value.validator_address"></app-validator-span>
                         </a>
                         <br>
-                        <mdb-badge default="true">withdrew</mdb-badge>&nbsp;
+                        <span class="badge" default="true">withdrew</span>&nbsp;
                         commission
                         <br>                           
                       </span>
@@ -188,7 +188,7 @@
                           <app-validator-span [validator]="tx.msg[i].value.delegator_address"></app-validator-span>
                         </a>
                         <br> 
-                        <mdb-badge default="true">created validator</mdb-badge>&nbsp;
+                        <span class="badge" default="true">created validator</span>&nbsp;
                         {{ tx.msg[i].value.description.moniker }}                           
                       </span>   
 
@@ -198,7 +198,7 @@
                           <app-validator-span [validator]="tx.msg[i].value.delegator_address"></app-validator-span>
                         </a>
                         <br> 
-                        <mdb-badge default="true">validator updated</mdb-badge>&nbsp;                        
+                        <span class="badge" default="true">validator updated</span>&nbsp;                        
                       </span>   
                       
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgVote'">
@@ -206,18 +206,17 @@
                           <app-validator-span [validator]="tx.msg[i].value.voter"></app-validator-span>
                         </a>
                         <br> 
-                        <mdb-badge default="true">voted</mdb-badge>&nbsp;
+                        <span class="badge" default="true">voted</span>&nbsp;
                         {{ tx.msg[i].value.option }} on prop.{{ tx.msg[i].value.proposal_id }}                           
                       </span>        
                     </span>
                     <span *ngIf="tx.error">
-                      <mdb-badge danger="true">Error</mdb-badge>&nbsp;{{ tx.error|titlecase }}
+                      <span class="badge" danger="true">Error</span>&nbsp;{{ tx.error|titlecase }}
                     </span>
-                  </mdb-card-text>
-                  <button mdbBtn color="pink" rounded="true" size="sm" mdbWavesEffect 
-                  style="cursor: pointer;" (click)="openTxDialog(tx)" class="detail-button">Detail</button>
-                </mdb-card-body>
-              </mdb-card>
+                  </mat-card-content>
+                  <button (click)="openTxDialog(tx)" mat-stroked-button color="accent">Details</button>
+                </mat-card-content>
+              </mat-card>
           </div>
         </td>
       </ng-container>
@@ -230,13 +229,13 @@
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="tx-detail-row"></tr>
     </table>
-  </div>
-  <div class="button-row">
-    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Show More</button>
+    <!-- <div class="button-row"> -->
+      <!-- <button (click)="displayOlderTxs();" type="button" class="btn btn-primary btn-lg btn-block">Show More</button> -->
+    <!-- </div> -->
   </div>
 </span>
 <ng-template #elseLoading>
-  <div style="display: flex; justify-content: center;">
-    <mdb-spinner spinnerColor="blue"></mdb-spinner>
+  <div class="mx-5" style="display: flex; justify-content: center;">
+    <mat-progress-bar color="accent" mode="indeterminate"></mat-progress-bar>
   </div> 
 </ng-template>
